cabal-version:         2.4

name:                  helps
version:               0.3.0.2
synopsis:              HELPS - Heavenly Esoteric Little Pre Schemer for Esoteric Languages
description:           Please see the README on GitHub at <https://github.com/helvm/helps#readme>
homepage:              https://helvm.org/helps/
bug-reports:           https://github.com/helvm/helps/issues

license:               Apache-2.0
license-file:          docs/license/LICENSE-APACHE
author:                Kamil Adam
maintainer:            kamil.adam.zabinski@gmail.com
copyright:             2020-2025 WriteOnly Developers

category:              Language
build-type:            Simple
extra-source-files:
  docs/developers/CHANGELOG.md
  docs/README.md

tested-with:           GHC == 9.10.1

source-repository head
  type:                git
  location:            https://github.com/helvm/helps

flag ghcoptions
  description:         compile with options
  manual:              True
  default:             False

common common-options
  build-depends:
      base                 <  5
    , relude
    , helio
    , hs2lazy
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude, Relude.Extra, Data.Text)
  default-language:    Haskell2010
  default-extensions:
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
--    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns
--    CPP
--    TemplateHaskell
--    ForeignFunctionInterface
--    MagicHash
--    UnliftedFFITypes
    TypeOperators
--    UnboxedTuples
--    PackageImports
--    QuasiQuotes
--    DeriveAnyClass
--    DeriveLift
--    StaticPointers
    DerivingStrategies
    ConstraintKinds
    StrictData
    BlockArguments
  if flag(ghcoptions)
    ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wnoncanonical-monad-instances
      -fhide-source-paths
--      -Wmissing-export-lists FIXME
       -Wpartial-fields
      -Wmissing-deriving-strategies
      -fwrite-ide-info
      -hiedir=.hie
--      -Wunused-packages
      -fprint-potential-instances
      -Werror

library
  import:              common-options
  hs-source-dirs:      hs/src
  exposed-modules:
    HelVM.HelPS.Util

    HelVM.HelPS.Compiler.Adapter
    HelVM.HelPS.Compiler.Impl

    HelVM.HelPS.Compiler.Impl.Barely
    HelVM.HelPS.Compiler.Impl.Classy
    HelVM.HelPS.Compiler.Impl.Effectively
    HelVM.HelPS.Compiler.Impl.Typically

    HelVM.HelPS.MiniHaskell.Classy
    HelVM.HelPS.MiniHaskell.ClassyAdapter

    HelVM.HelPS.HS2Lazy.Adapter

  build-depends:

  ghc-options:

executable helps
  import:              common-options
  hs-source-dirs:      hs/app
  main-is:             Main.hs
  other-modules:
    HelVM.HelPS.AppOptions
    HelVM.HelPS.Lang

  build-depends:
      helps
    , rio
    , optparse-simple
    , optparse-applicative
    , text

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite helps-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hs/test
  main-is:             Main.hs
  other-modules:
    Spec
    SpecHook

    HelVM.Expectations
    HelVM.GoldenExpectations

    HelVM.HelPS.CompilerSpec
    HelVM.HelPS.HS2LazySpec
    HelVM.HelPS.MiniHaskellSpec

  build-depends:
      hspec
    , hspec-core
    , hspec-expectations-pretty-diff
    , hspec-golden
    , hspec-slow

    , helio
    , helps
    , rio

    , filepath
    , stm
    , time
    , type-operators

  build-tool-depends:  hspec-discover:hspec-discover == 2.*
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

--benchmark helps-benchmark
--  import:              common-options
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      hs/benchmark
--  main-is:             Main.hs
--  other-modules:

--  build-depends:
--      gauge

--    , helps

--  ghc-options:
--    -threaded
--    -rtsopts
--    -with-rtsopts=-N
